clean up rc.c file messages

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-22  gettextize  <bug-gnu-gettext@gnu.org>
 
+	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
+	(EXTRA_DIST): Add m4/ChangeLog.
+
+2006-05-22  gettextize  <bug-gnu-gettext@gnu.org>
+
 	* Makefile.am (SUBDIRS): New variable.
 	(ACLOCAL_AMFLAGS): New variable.
 	(EXTRA_DIST): Add config.rpath.
