--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-22  gettextize  <bug-gnu-gettext@gnu.org>
 
+	* Makefile.in.in: Upgrade to gettext-0.14.3.
+	* Rules-quot: Upgrade to gettext-0.14.3.
+
+2006-05-22  gettextize  <bug-gnu-gettext@gnu.org>
+
 	* Makefile.in.in: New file, from gettext-0.11.1.
 	* boldquot.sed: New file, from gettext-0.11.1.
 	* en@boldquot.header: New file, from gettext-0.11.1.
