Update changelog and todo

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
+-restore: it should work during ^K E too (maybe
+  in bload())?
+
 only give lock message if lock already exists.
 
 warning every minute about the lock is too much.
@@ -6,7 +9,8 @@ option for compile window size (or make mfit prompt for the size)
 
 multi-file search & replace: check for deleted 'B *'.
 
-pipe into joe is broken.
+pipe into joe is broken.   If it's a regular file, we should
+just load it.
 
 gettext:
   use intl subdirectory?
