--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+Mon May 22 23:35:21 EDT 2006
+
+	Fix shell highlighting bugs.
+
+	Clean up ^T options display.
+
+	Fix querysave bug (it was not always saving everything!)
+
+	Add Russion .po file.
+
+	Get gettext() to actually work.
+
+	Add -restore option.
+
 2006-05-22  gettextize  <bug-gnu-gettext@gnu.org>
 
 	* Makefile.am (ACLOCAL_AMFLAGS): New variable.
