--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue May 23 17:28:48 EDT 2006
+
+	Switch to my own gettext() library.
+
 Mon May 22 23:35:21 EDT 2006
 
 	Fix shell highlighting bugs.
