--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed May 24 11:01:53 EDT 2006
+
+	Rearrange directories.
+	Check for localized joerc file, like joerc.ru.
+
 Tue May 23 17:28:48 EDT 2006
 
 	Switch to my own gettext() library.
