--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@ Wed May 24 11:01:53 EDT 2006
 
 	Restore cursor position works for ^K E
 
+	Improve sh highlighter
+
 Tue May 23 17:28:48 EDT 2006
 
 	Switch to my own gettext() library.
