more columns for line numbers

--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ Fri May 26 11:13:10 EDT 2006
 
 	new '-transpose' flag transposes all menus.
 
+ 	more columns for line number
+
 Wed May 24 11:01:53 EDT 2006
 
 	Rearrange directories.
