--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+tags has to force bof
+
 autodetect xterm?  it doesn't give enough information.
 
 did shell window in joe-3.2 3.2 create a new window?
