--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ Tue May 30 09:26:59 EDT 2006
 
 	Wordwrap improvements.
 
+	Fix gettext() bug foudn by egmont.
+
 Fri May 26 11:13:10 EDT 2006
 
 	Autoindent now happens for word-wrap.
