--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ Tue May 30 09:26:59 EDT 2006
 
 	Fix gettext() bug foudn by egmont.
 
+	Change tag ^K ; to jump to beginning of file before doing a search.
+
 Fri May 26 11:13:10 EDT 2006
 
 	Autoindent now happens for word-wrap.
