--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+
 Tue May 30 09:26:59 EDT 2006
 
 	Wordwrap improvements.
@@ -5,6 +6,10 @@ Tue May 30 09:26:59 EDT 2006
 	Fix gettext() bug foudn by egmont.
 
 	Change tag ^K ; to jump to beginning of file before doing a search.
+
+	Cygwin fixes
+
+	Missing @JOERC@ in joerc.in
 
 Fri May 26 11:13:10 EDT 2006
 
