--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+^C breaks in Cygwin when piping into joe
+
 autodetect xterm?  it doesn't give enough information.
 
 did shell window in joe-3.2 3.2 create a new window?
