--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+Wed May 31 22:37:56 EDT 2006
+
+	query windows can now be multi-line.  Also they should handle wide
+	characters properly.
+
+	you can now type a macro right into the ESC X prompt.
+
+	New * Startup Log * window catches .jsf file errors.
+
+JOE 3.4 --->
 
 Tue May 30 09:26:59 EDT 2006
 
@@ -10,6 +20,8 @@ Tue May 30 09:26:59 EDT 2006
 	Cygwin fixes
 
 	Missing @JOERC@ in joerc.in
+
+
 
 Fri May 26 11:13:10 EDT 2006
 
