--- a/TODO
+++ b/TODO
@@ -1,3 +1,9 @@
+yes/no questions.
+
+startup log should pop up whenever syntax files are loaded.
+
+joerc file is funny because of the :include
+
 ^C breaks in Cygwin when piping into joe
 
 autodetect xterm?  it doesn't give enough information.
@@ -19,14 +25,6 @@ Improvements for regular text
 mode where wordwrap wraps rest of paragraph?
 
 mode where all editing wraps rest of paragraph?
-
-=-=-=-=-=
-
-Load status window...
-
- Show path to joerc file.
-
- syntax file errors should go to a pop-up error window.
 
 =-=-=-=-=
 
