--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
+full path needs to go in line number restore code
+
 yes/no questions.
 
 startup log should pop up whenever syntax files are loaded.
