--- a/po/ru.po
+++ b/po/ru.po
@@ -1497,11 +1497,11 @@ msgid "System (^C to abort): "
 msgstr "Система (^C для отмены): "
 
 #: ufile.c:273
-msgid "yY<>yY"
+msgid "yY"
 msgstr ""
 
 #: ufile.c:274
-msgid "nN<>nN"
+msgid "nN"
 msgstr ""
 
 #: ufile.c:313
@@ -1644,11 +1644,11 @@ msgid "Find (^C to abort): "
 msgstr "Что искать (^C для отмены): "
 
 #: usearch.c:809
-msgid "rR<>rR"
+msgid "rR"
 msgstr ""
 
 #: usearch.c:810
-msgid "bB<>bB"
+msgid "bB"
 msgstr ""
 
 #: usearch.c:841
