--- a/po/joe.pot
+++ b/po/joe.pot
@@ -1416,11 +1416,11 @@ msgid "System (^C to abort): "
 msgstr ""
 
 #: ufile.c:273
-msgid "yY<>yY"
+msgid "yY"
 msgstr ""
 
 #: ufile.c:274
-msgid "nN<>nN"
+msgid "nN"
 msgstr ""
 
 #: ufile.c:313
@@ -1561,11 +1561,11 @@ msgid "Find (^C to abort): "
 msgstr ""
 
 #: usearch.c:809
-msgid "rR<>rR"
+msgid "rR"
 msgstr ""
 
 #: usearch.c:810
-msgid "bB<>bB"
+msgid "bB"
 msgstr ""
 
 #: usearch.c:841
