--- a/po/joe.pot
+++ b/po/joe.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-06-06 22:57-0400\n"
+"POT-Creation-Date: 2006-06-07 01:45-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1429,11 +1429,11 @@ msgid "System (^C to abort): "
 msgstr ""
 
 #: ufile.c:273
-msgid "yY"
+msgid "|yes|yY"
 msgstr ""
 
-#: ufile.c:274 usearch.c:561
-msgid "nN"
+#: ufile.c:274
+msgid "|no|nN"
 msgstr ""
 
 #: ufile.c:309
@@ -1551,19 +1551,19 @@ msgid "Wrapped"
 msgstr ""
 
 #: usearch.c:553
-msgid "aA"
+msgid "|all files|aA"
 msgstr ""
 
 #: usearch.c:554
-msgid "eE"
+msgid "|error list files|eE"
 msgstr ""
 
-#: usearch.c:555 usearch.c:813
-msgid "rR"
+#: usearch.c:555
+msgid "|search and replace|rR"
 msgstr ""
 
-#: usearch.c:556 usearch.c:814
-msgid "bB"
+#: usearch.c:556
+msgid "|backwards|bB"
 msgstr ""
 
 #: usearch.c:557
@@ -1571,15 +1571,19 @@ msgid "|ignore case|iI"
 msgstr ""
 
 #: usearch.c:558
-msgid "kK"
+msgid "|restrict to highlighted block|kK"
 msgstr ""
 
 #: usearch.c:559
-msgid "sS"
+msgid "|don't ignore case|sS"
 msgstr ""
 
 #: usearch.c:560
-msgid "wW"
+msgid "|wrap|wW"
+msgstr ""
+
+#: usearch.c:561
+msgid "|don't wrap|nN"
 msgstr ""
 
 #: usearch.c:618
@@ -1603,6 +1607,14 @@ msgstr ""
 
 #: usearch.c:719
 msgid "Find (^C to abort): "
+msgstr ""
+
+#: usearch.c:813
+msgid "|rest of file|rR"
+msgstr ""
+
+#: usearch.c:814
+msgid "|backup|bB"
 msgstr ""
 
 #: usearch.c:845
