--- a/po/ru.po
+++ b/po/ru.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 2.9.6\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2006-06-06 22:57-0400\n"
+"POT-Creation-Date: 2006-06-07 01:45-0400\n"
 "PO-Revision-Date: 2006-05-22 22:56-0400\n"
 "Last-Translator: Yura Kalinichenko <yuk@iceb.vinnitsa.com>\n"
 "Language-Team: Russian <ru@li.org>\n"
@@ -1510,11 +1510,11 @@ msgid "System (^C to abort): "
 msgstr "Система (^C для отмены): "
 
 #: ufile.c:273
-msgid "yY"
+msgid "|yes|yY"
 msgstr ""
 
-#: ufile.c:274 usearch.c:561
-msgid "nN"
+#: ufile.c:274
+msgid "|no|nN"
 msgstr ""
 
 #: ufile.c:309
@@ -1632,19 +1632,20 @@ msgid "Wrapped"
 msgstr "Сначала"
 
 #: usearch.c:553
-msgid "aA"
+msgid "|all files|aA"
 msgstr ""
 
 #: usearch.c:554
-msgid "eE"
+#, fuzzy
+msgid "|error list files|eE"
+msgstr "Ошибка записи файла"
+
+#: usearch.c:555
+msgid "|search and replace|rR"
 msgstr ""
 
-#: usearch.c:555 usearch.c:813
-msgid "rR"
-msgstr ""
-
-#: usearch.c:556 usearch.c:814
-msgid "bB"
+#: usearch.c:556
+msgid "|backwards|bB"
 msgstr ""
 
 #: usearch.c:557
@@ -1652,16 +1653,21 @@ msgid "|ignore case|iI"
 msgstr ""
 
 #: usearch.c:558
-msgid "kK"
+msgid "|restrict to highlighted block|kK"
 msgstr ""
 
 #: usearch.c:559
-msgid "sS"
+msgid "|don't ignore case|sS"
 msgstr ""
 
 #: usearch.c:560
-msgid "wW"
+msgid "|wrap|wW"
 msgstr ""
+
+#: usearch.c:561
+#, fuzzy
+msgid "|don't wrap|nN"
+msgstr "Поиск не циклический"
 
 #: usearch.c:618
 msgid "Replace with (^C to abort): "
@@ -1687,6 +1693,14 @@ msgstr "Что искать (^C для отмены) [%s]: "
 #: usearch.c:719
 msgid "Find (^C to abort): "
 msgstr "Что искать (^C для отмены): "
+
+#: usearch.c:813
+msgid "|rest of file|rR"
+msgstr ""
+
+#: usearch.c:814
+msgid "|backup|bB"
+msgstr ""
 
 #: usearch.c:845
 msgid "Replace (Y)es (N)o (R)est (B)ackup (^C to abort)?"
