--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Jul 13 09:53:31 EDT 2006
+
+	Fix possible querysave bug.
+
 Mon Jul 10 13:38:04 EDT 2006
 
 	Fix bug from undo_keep: undo_keep has to be a multiple of 2 for redo
