allow ,start,size only if correct

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@ Thu Jul 13 09:53:31 EDT 2006
 
 	Fix bug where we could not find ^@
 
+	Accept ,start,size notation only if it is correct.
+
 Mon Jul 10 13:38:04 EDT 2006
 
 	Fix bug from undo_keep: undo_keep has to be a multiple of 2 for redo
