--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Mon Jan 22 23:16:24 EST 2007
+
+	Convert from wmkpw() to ask().
+
+	Handle new tags file format.
+
 Sat Jan 20 23:58:17 EST 2007
 
 	Fix obj_stack leak during coroutine switch.
